<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >Centipede
    </string>
    <string name="action_settings" >Settings
    </string>
    <string name="action_main_menu" >Main Menu
    </string>
    <string name="hello_world" >Hello world!
    </string>
    <string name="start_button" >Start Game
    </string>
    <string name="settings_button" >Settings
    </string>
    <string name="title_string">Centipede</string>
    <string name="txt_size">Size</string>
    <string name="txt_speed">Speed</string>
    <string name="btn_Accept">Accept</string>
    <string name="btn_cancel">Cancel</string>
    <string name="action_pause">Pause</string>
    <string name="action_resume">Resume</string>

</resources>
