<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings_button"
            android:id="@+id/txt_size"
            android:layout_gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_speed"
            android:id="@+id/txt_speed"
            android:layout_gravity="left|center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/editText_size"
            android:layout_gravity="right|center_vertical"
            android:text="0"
            android:layout_alignBottom="@+id/txt_size"
            android:layout_alignParentRight="true"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/editText_speed"
            android:layout_gravity="right|center_vertical"
            android:text="0"
            android:layout_alignBottom="@+id/txt_speed"
            android:layout_alignRight="@+id/btn_cancel"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:id="@+id/btn_cancel"
            android:layout_gravity="right|center_vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="onCancelClick"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_Accept"
            android:id="@+id/btn_accept"
            android:layout_gravity="left|center_vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/txt_speed"
            android:onClick="onAcceptClick"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_size"
            android:id="@+id/txt_size"
            android:layout_above="@+id/editText_speed"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="30dp"/>

</RelativeLayout>